# tauri-mistral-chat

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.cursor/rules/: tauri-rust.mdc
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: download_models.rs  hello_world.rs
src-tauri/src/: lib.rs  main.rs
src/components/: chat.tsx
