[package]
name = "tauri-mistral-chat"
version = "0.1.0"
description = "A Tauri App"
authors = ["Daniel Bank <daniel@xaac.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_mistral_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["stream"] }
futures = "0.3"
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive"] }
image = "0.25"
base64 = "0.22"

[[example]]
name = "download_models"
path = "examples/download_models.rs"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[dependencies.mistralrs]
git = "https://github.com/EricLBuehler/mistral.rs"
features = ["metal"]
